@@ -17,6 +17,7 @@ import org.hamcrest.Matcher;
 import java.util.List;
 import java.util.Set;
 
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 
 public class MvContainsErrorTests extends ErrorsForCasesWithoutExamplesTestCase {
@@ -32,14 +33,21 @@ public class MvContainsErrorTests extends ErrorsForCasesWithoutExamplesTestCase 
 
     @Override
     protected Matcher<String> expectedTypeErrorMatcher(List<Set<DataType>> validPerPosition, List<DataType> signature) {
-        return equalTo(
-            "second argument of ["
-                + sourceForSignature(signature)
-                + "] must be ["
-                + signature.get(0).noText().typeName()
-                + "], found value [] type ["
-                + signature.get(1).typeName()
-                + "]"
-        );
+        if (signature.getFirst() == DataType.DENSE_VECTOR
+            || signature.getFirst() == DataType.NULL && signature.get(1) == DataType.DENSE_VECTOR) {
+            return containsString(
+                typeErrorMessage(false, validPerPosition, signature, (v, p) -> "any type except counter types or dense_vector")
+            );
+        } else {
+            return equalTo(
+                "second argument of ["
+                    + sourceForSignature(signature)
+                    + "] must be ["
+                    + signature.get(0).noText().typeName()
+                    + "], found value [] type ["
+                    + signature.get(1).typeName()
+                    + "]"
+            );
+        }
     }
 }
